Tareas de la q09 a la q15, corrección nombre columna consulta q08

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -533,17 +533,305 @@
        " ('2019', 550.9985714285714)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sqlite3\n",
-    "SELECT strftime('%Y', c23) AS YEAR, AVG(c21) \n",
+    "SELECT strftime('%Y', c23) AS YEAR, avg(c21) \n",
     "FROM tbl2\n",
     "GROUP BY strftime('%Y', c23)\n",
     "ORDER BY strftime('%Y', c23);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q09.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne el registro\n",
+    "## con el menor valor en la columna c21 de la \n",
+    "## tabla tbl2.\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(29, 101.11, 100, '2017-11-17', 0.42, 'MV-CB')]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT *\n",
+    "FROM tbl2\n",
+    "WHERE c21 = (SELECT MIN(c21) FROM tbl2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q10.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne todos los \n",
+    "## campos de los registros de la tabla tbl0 \n",
+    "## con la columna c02 mayor o igual a 300.\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('\\ufeffA', 5000, 900, 'NMNJL', 0.4),\n",
+       " ('C', 1000, 600, 'LMMML', 0.2),\n",
+       " ('D', 4000, 600, 'PJLJL', 0.4),\n",
+       " ('F', 2000, 300, 'NNPJO', 0.3),\n",
+       " ('I', 3000, 300, 'PPPPL', 0.3)]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT *\n",
+    "FROM tbl0\n",
+    "WHERE c02 >= 300;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q11.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne el total \n",
+    "## de registros de la tabla tbl1 para el ano\n",
+    "## 2018\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2018', 6)]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT strftime('%Y', c14) AS YEAR, COUNT(*) AS CANT\n",
+    "FROM tbl1\n",
+    "WHERE strftime('%Y', c14) = '2018';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q12.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne el total \n",
+    "## de registros de la tabla tbl1 para el ano\n",
+    "## 2018\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2018', 6)]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT strftime('%Y', c14) AS YEAR, COUNT(*) AS CANT\n",
+    "FROM tbl1\n",
+    "WHERE strftime('%Y', c14) = '2018';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q13.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne por cada letra\n",
+    "## de la columna K0, el valor máximo de la coumna c12\n",
+    "## en la tabla tbl1.\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A', 938.16, 135.8),\n",
+       " ('B', 999.72, 283.4),\n",
+       " ('C', 822.81, 267.42),\n",
+       " ('D', 756.37, 317.77),\n",
+       " ('E', 832.44, 118.77)]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT k0, MAX(c12), min(C12)\n",
+    "FROM tbl1\n",
+    "GROUP BY k0;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q14.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne por cada letra\n",
+    "## de la columna K0, el valor promedio de la columna c12\n",
+    "## en la tabla tbl1, para aquellos registros con c13 mayor\n",
+    "## a 400.\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A', 476.155),\n",
+       " ('B', 536.5233333333333),\n",
+       " ('C', 490.8299999999999),\n",
+       " ('D', 709.53),\n",
+       " ('E', 474.82500000000005)]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT k0, avg(c12)\n",
+    "FROM tbl1\n",
+    "WHERE c13 > 400\n",
+    "GROUP BY k0;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q15.sql\n",
+    "\n",
+    "~~~\n",
+    "## \n",
+    "## Escriba una consulta que retorne por cada letra\n",
+    "## de la columna K0, el valor promedio de la columna c21\n",
+    "## en la tabla tbl1, para aquellos registros con c13 mayor\n",
+    "## a 400.\n",
+    "##\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A', 593.495),\n",
+       " ('B', 575.47),\n",
+       " ('C', 530.7529999999999),\n",
+       " ('D', 655.6125),\n",
+       " ('E', 555.323076923077)]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sqlite3\n",
+    "SELECT k0, avg(c21)\n",
+    "FROM tbl1 NATURAL JOIN tbl2\n",
+    "WHERE c13 > 400\n",
+    "GROUP BY k0;"
    ]
   }
  ],
